<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <com.google.android.material.tabs.TabLayout

        android:id="@+id/tablay_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Historik" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kalibrering" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Feedback" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tab4" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>