<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tab3">


        <TextView
            android:id="@+id/textViewOverskrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Fremgangsmåde for kalibering"
            android:textColor="@android:color/background_dark"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textViewVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewOverskrift"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:paddingLeft="1dp"/>

        <VideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVideo"/>

</RelativeLayout>